src/main/java/de/tudortmund/cs/iltis/folalib/io/parser/regex/RegularExpressionParser.java
// Generated from
// ../src/main/java/de/tudortmund/cs/iltis/folalib/io/parser/regex/RegularExpressionParser.g4 by
// ANTLR 4.4
package de.tudortmund.cs.iltis.folalib.io.parser.regex;

import de.tudortmund.cs.iltis.utils.io.parser.general.AbstractParser;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RegularExpressionParser extends AbstractParser {
    static {
        RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int OPENING_PARENTHESIS = 1,
            CLOSING_PARENTHESIS = 2,
            OPENING_REPETITION = 3,
            CLOSING_REPETITION = 4,
            FIXED_REPETITION_OPENER = 5,
            OPENING_RANGE = 6,
            CLOSING_RANGE = 7,
            REPETITION_SEPARATOR = 8,
            EPSILON = 9,
            SYMBOL = 10,
            EMPTY_SET = 11,
            WORD = 12,
            REPETITION_OPERAND = 13,
            ALTERNATION = 14,
            KLEENE_STAR = 15,
            KLEENE_PLUS = 16,
            OPTIONAL = 17,
            RANGE_SEPARATOR = 18,
            WHITESPACE = 19;
    public static final String[] tokenNames = {
        "<INVALID>",
        "OPENING_PARENTHESIS",
        "CLOSING_PARENTHESIS",
        "OPENING_REPETITION",
        "CLOSING_REPETITION",
        "FIXED_REPETITION_OPENER",
        "OPENING_RANGE",
        "CLOSING_RANGE",
        "REPETITION_SEPARATOR",
        "EPSILON",
        "SYMBOL",
        "EMPTY_SET",
        "WORD",
        "REPETITION_OPERAND",
        "ALTERNATION",
        "KLEENE_STAR",
        "KLEENE_PLUS",
        "OPTIONAL",
        "RANGE_SEPARATOR",
        "WHITESPACE"
    };
    public static final int RULE_onlyRegex = 0,
            RULE_regex = 1,
            RULE_alternationContinuation = 2,
            RULE_concatenation = 3,
            RULE_subexpressionWrap = 4,
            RULE_repetition = 5,
            RULE_subexpression = 6,
            RULE_range = 7,
            RULE_symbol = 8;
    public static final String[] ruleNames = {
        "onlyRegex",
        "regex",
        "alternationContinuation",
        "concatenation",
        "subexpressionWrap",
        "repetition",
        "subexpression",
        "range",
        "symbol"
    };

    @Override
    public String getGrammarFileName() {
        return "RegularExpressionParser.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public RegularExpressionParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class OnlyRegexContext extends ParserRuleContext {
        public OnlyRegexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_onlyRegex;
        }

        public OnlyRegexContext() {}

        public void copyFrom(OnlyRegexContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class EmptyRegexERRORContext extends OnlyRegexContext {
        public TerminalNode EOF() {
            return getToken(RegularExpressionParser.EOF, 0);
        }

        public EmptyRegexERRORContext(OnlyRegexContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitEmptyRegexERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class CorrectOnlyRegexContext extends OnlyRegexContext {
        public TerminalNode EOF() {
            return getToken(RegularExpressionParser.EOF, 0);
        }

        public RegexContext regex() {
            return getRuleContext(RegexContext.class, 0);
        }

        public CorrectOnlyRegexContext(OnlyRegexContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitCorrectOnlyRegex(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StartWithCardinalityOperatorERRORContext extends OnlyRegexContext {
        public TerminalNode KLEENE_STAR(int i) {
            return getToken(RegularExpressionParser.KLEENE_STAR, i);
        }

        public List<TerminalNode> KLEENE_STAR() {
            return getTokens(RegularExpressionParser.KLEENE_STAR);
        }

        public List<TerminalNode> KLEENE_PLUS() {
            return getTokens(RegularExpressionParser.KLEENE_PLUS);
        }

        public TerminalNode EOF() {
            return getToken(RegularExpressionParser.EOF, 0);
        }

        public TerminalNode KLEENE_PLUS(int i) {
            return getToken(RegularExpressionParser.KLEENE_PLUS, i);
        }

        public List<TerminalNode> OPTIONAL() {
            return getTokens(RegularExpressionParser.OPTIONAL);
        }

        public RegexContext regex() {
            return getRuleContext(RegexContext.class, 0);
        }

        public TerminalNode OPTIONAL(int i) {
            return getToken(RegularExpressionParser.OPTIONAL, i);
        }

        public RepetitionContext repetition(int i) {
            return getRuleContext(RepetitionContext.class, i);
        }

        public List<RepetitionContext> repetition() {
            return getRuleContexts(RepetitionContext.class);
        }

        public StartWithCardinalityOperatorERRORContext(OnlyRegexContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitStartWithCardinalityOperatorERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class StartWithAlternationERRORContext extends OnlyRegexContext {
        public TerminalNode EOF() {
            return getToken(RegularExpressionParser.EOF, 0);
        }

        public TerminalNode ALTERNATION(int i) {
            return getToken(RegularExpressionParser.ALTERNATION, i);
        }

        public RegexContext regex() {
            return getRuleContext(RegexContext.class, 0);
        }

        public List<TerminalNode> ALTERNATION() {
            return getTokens(RegularExpressionParser.ALTERNATION);
        }

        public StartWithAlternationERRORContext(OnlyRegexContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitStartWithAlternationERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public final OnlyRegexContext onlyRegex() throws RecognitionException {
        OnlyRegexContext _localctx = new OnlyRegexContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_onlyRegex);
        int _la;
        try {
            setState(43);
            switch (_input.LA(1)) {
                case OPENING_PARENTHESIS:
                case OPENING_RANGE:
                case EPSILON:
                case SYMBOL:
                case EMPTY_SET:
                    _localctx = new CorrectOnlyRegexContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(18);
                        regex();
                        setState(19);
                        match(EOF);
                    }
                    break;
                case ALTERNATION:
                    _localctx = new StartWithAlternationERRORContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(22);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(21);
                                    match(ALTERNATION);
                                }
                            }
                            setState(24);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == ALTERNATION);
                        setState(27);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << OPENING_PARENTHESIS)
                                                        | (1L << OPENING_RANGE)
                                                        | (1L << EPSILON)
                                                        | (1L << SYMBOL)
                                                        | (1L << EMPTY_SET)))
                                        != 0)) {
                            {
                                setState(26);
                                regex();
                            }
                        }

                        setState(29);
                        match(EOF);
                    }
                    break;
                case OPENING_REPETITION:
                case FIXED_REPETITION_OPENER:
                case KLEENE_STAR:
                case KLEENE_PLUS:
                case OPTIONAL:
                    _localctx = new StartWithCardinalityOperatorERRORContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(34);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                setState(34);
                                switch (_input.LA(1)) {
                                    case KLEENE_STAR:
                                        {
                                            setState(30);
                                            match(KLEENE_STAR);
                                        }
                                        break;
                                    case KLEENE_PLUS:
                                        {
                                            setState(31);
                                            match(KLEENE_PLUS);
                                        }
                                        break;
                                    case OPTIONAL:
                                        {
                                            setState(32);
                                            match(OPTIONAL);
                                        }
                                        break;
                                    case OPENING_REPETITION:
                                    case FIXED_REPETITION_OPENER:
                                        {
                                            setState(33);
                                            repetition();
                                        }
                                        break;
                                    default:
                                        throw new NoViableAltException(this);
                                }
                            }
                            setState(36);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << OPENING_REPETITION)
                                                        | (1L << FIXED_REPETITION_OPENER)
                                                        | (1L << KLEENE_STAR)
                                                        | (1L << KLEENE_PLUS)
                                                        | (1L << OPTIONAL)))
                                        != 0));
                        setState(39);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << OPENING_PARENTHESIS)
                                                        | (1L << OPENING_RANGE)
                                                        | (1L << EPSILON)
                                                        | (1L << SYMBOL)
                                                        | (1L << EMPTY_SET)))
                                        != 0)) {
                            {
                                setState(38);
                                regex();
                            }
                        }

                        setState(41);
                        match(EOF);
                    }
                    break;
                case EOF:
                    _localctx = new EmptyRegexERRORContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(42);
                        match(EOF);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RegexContext extends ParserRuleContext {
        public List<AlternationContinuationContext> alternationContinuation() {
            return getRuleContexts(AlternationContinuationContext.class);
        }

        public ConcatenationContext concatenation() {
            return getRuleContext(ConcatenationContext.class, 0);
        }

        public AlternationContinuationContext alternationContinuation(int i) {
            return getRuleContext(AlternationContinuationContext.class, i);
        }

        public RegexContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_regex;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor).visitRegex(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RegexContext regex() throws RecognitionException {
        RegexContext _localctx = new RegexContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_regex);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                concatenation();
                setState(49);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ALTERNATION) {
                    {
                        {
                            setState(46);
                            alternationContinuation();
                        }
                    }
                    setState(51);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AlternationContinuationContext extends ParserRuleContext {
        public AlternationContinuationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alternationContinuation;
        }

        public AlternationContinuationContext() {}

        public void copyFrom(AlternationContinuationContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CorrectAlternationContext extends AlternationContinuationContext {
        public ConcatenationContext concatenation() {
            return getRuleContext(ConcatenationContext.class, 0);
        }

        public TerminalNode ALTERNATION() {
            return getToken(RegularExpressionParser.ALTERNATION, 0);
        }

        public CorrectAlternationContext(AlternationContinuationContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitCorrectAlternation(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class MissingAlternationOperandERRORContext
            extends AlternationContinuationContext {
        public TerminalNode ALTERNATION() {
            return getToken(RegularExpressionParser.ALTERNATION, 0);
        }

        public MissingAlternationOperandERRORContext(AlternationContinuationContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitMissingAlternationOperandERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class CardinalityOperatorAfterAlternationERRORContext
            extends AlternationContinuationContext {
        public TerminalNode KLEENE_STAR(int i) {
            return getToken(RegularExpressionParser.KLEENE_STAR, i);
        }

        public List<TerminalNode> KLEENE_STAR() {
            return getTokens(RegularExpressionParser.KLEENE_STAR);
        }

        public List<TerminalNode> KLEENE_PLUS() {
            return getTokens(RegularExpressionParser.KLEENE_PLUS);
        }

        public TerminalNode KLEENE_PLUS(int i) {
            return getToken(RegularExpressionParser.KLEENE_PLUS, i);
        }

        public List<TerminalNode> OPTIONAL() {
            return getTokens(RegularExpressionParser.OPTIONAL);
        }

        public ConcatenationContext concatenation() {
            return getRuleContext(ConcatenationContext.class, 0);
        }

        public TerminalNode OPTIONAL(int i) {
            return getToken(RegularExpressionParser.OPTIONAL, i);
        }

        public TerminalNode ALTERNATION() {
            return getToken(RegularExpressionParser.ALTERNATION, 0);
        }

        public RepetitionContext repetition(int i) {
            return getRuleContext(RepetitionContext.class, i);
        }

        public List<RepetitionContext> repetition() {
            return getRuleContexts(RepetitionContext.class);
        }

        public CardinalityOperatorAfterAlternationERRORContext(AlternationContinuationContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitCardinalityOperatorAfterAlternationERROR(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AlternationContinuationContext alternationContinuation()
            throws RecognitionException {
        AlternationContinuationContext _localctx =
                new AlternationContinuationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_alternationContinuation);
        int _la;
        try {
            setState(67);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                case 1:
                    _localctx = new CorrectAlternationContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(52);
                        match(ALTERNATION);
                        setState(53);
                        concatenation();
                    }
                    break;
                case 2:
                    _localctx = new MissingAlternationOperandERRORContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(54);
                        match(ALTERNATION);
                    }
                    break;
                case 3:
                    _localctx = new CardinalityOperatorAfterAlternationERRORContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(55);
                        match(ALTERNATION);
                        setState(60);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                setState(60);
                                switch (_input.LA(1)) {
                                    case KLEENE_STAR:
                                        {
                                            setState(56);
                                            match(KLEENE_STAR);
                                        }
                                        break;
                                    case KLEENE_PLUS:
                                        {
                                            setState(57);
                                            match(KLEENE_PLUS);
                                        }
                                        break;
                                    case OPTIONAL:
                                        {
                                            setState(58);
                                            match(OPTIONAL);
                                        }
                                        break;
                                    case OPENING_REPETITION:
                                    case FIXED_REPETITION_OPENER:
                                        {
                                            setState(59);
                                            repetition();
                                        }
                                        break;
                                    default:
                                        throw new NoViableAltException(this);
                                }
                            }
                            setState(62);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << OPENING_REPETITION)
                                                        | (1L << FIXED_REPETITION_OPENER)
                                                        | (1L << KLEENE_STAR)
                                                        | (1L << KLEENE_PLUS)
                                                        | (1L << OPTIONAL)))
                                        != 0));
                        setState(65);
                        _la = _input.LA(1);
                        if ((((_la) & ~0x3f) == 0
                                && ((1L << _la)
                                                & ((1L << OPENING_PARENTHESIS)
                                                        | (1L << OPENING_RANGE)
                                                        | (1L << EPSILON)
                                                        | (1L << SYMBOL)
                                                        | (1L << EMPTY_SET)))
                                        != 0)) {
                            {
                                setState(64);
                                concatenation();
                            }
                        }
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConcatenationContext extends ParserRuleContext {
        public SubexpressionWrapContext subexpressionWrap(int i) {
            return getRuleContext(SubexpressionWrapContext.class, i);
        }

        public List<SubexpressionWrapContext> subexpressionWrap() {
            return getRuleContexts(SubexpressionWrapContext.class);
        }

        public ConcatenationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_concatenation;
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitConcatenation(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConcatenationContext concatenation() throws RecognitionException {
        ConcatenationContext _localctx = new ConcatenationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_concatenation);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(69);
                            subexpressionWrap(0);
                        }
                    }
                    setState(72);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0
                        && ((1L << _la)
                                        & ((1L << OPENING_PARENTHESIS)
                                                | (1L << OPENING_RANGE)
                                                | (1L << EPSILON)
                                                | (1L << SYMBOL)
                                                | (1L << EMPTY_SET)))
                                != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SubexpressionWrapContext extends ParserRuleContext {
        public SubexpressionWrapContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_subexpressionWrap;
        }

        public SubexpressionWrapContext() {}

        public void copyFrom(SubexpressionWrapContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class KleeneStarContext extends SubexpressionWrapContext {
        public TerminalNode KLEENE_STAR() {
            return getToken(RegularExpressionParser.KLEENE_STAR, 0);
        }

        public SubexpressionWrapContext subexpressionWrap() {
            return getRuleContext(SubexpressionWrapContext.class, 0);
        }

        public KleeneStarContext(SubexpressionWrapContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitKleeneStar(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SubexpressionLINKContext extends SubexpressionWrapContext {
        public SubexpressionContext subexpression() {
            return getRuleContext(SubexpressionContext.class, 0);
        }

        public SubexpressionLINKContext(SubexpressionWrapContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitSubexpressionLINK(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class OptionalContext extends SubexpressionWrapContext {
        public TerminalNode OPTIONAL() {
            return getToken(RegularExpressionParser.OPTIONAL, 0);
        }

        public SubexpressionWrapContext subexpressionWrap() {
            return getRuleContext(SubexpressionWrapContext.class, 0);
        }

        public OptionalContext(SubexpressionWrapContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor).visitOptional(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class KleenePlusContext extends SubexpressionWrapContext {
        public TerminalNode KLEENE_PLUS() {
            return getToken(RegularExpressionParser.KLEENE_PLUS, 0);
        }

        public SubexpressionWrapContext subexpressionWrap() {
            return getRuleContext(SubexpressionWrapContext.class, 0);
        }

        public KleenePlusContext(SubexpressionWrapContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitKleenePlus(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class RepetitionWithSubexpressionContext extends SubexpressionWrapContext {
        public SubexpressionWrapContext subexpressionWrap() {
            return getRuleContext(SubexpressionWrapContext.class, 0);
        }

        public RepetitionContext repetition() {
            return getRuleContext(RepetitionContext.class, 0);
        }

        public RepetitionWithSubexpressionContext(SubexpressionWrapContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitRepetitionWithSubexpression(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SubexpressionWrapContext subexpressionWrap() throws RecognitionException {
        return subexpressionWrap(0);
    }

    private SubexpressionWrapContext subexpressionWrap(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        SubexpressionWrapContext _localctx = new SubexpressionWrapContext(_ctx, _parentState);
        SubexpressionWrapContext _prevctx = _localctx;
        int _startState = 8;
        enterRecursionRule(_localctx, 8, RULE_subexpressionWrap, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new SubexpressionLINKContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(75);
                    subexpression();
                }
                _ctx.stop = _input.LT(-1);
                setState(87);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(85);
                            switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
                                case 1:
                                    {
                                        _localctx =
                                                new KleeneStarContext(
                                                        new SubexpressionWrapContext(
                                                                _parentctx, _parentState));
                                        pushNewRecursionContext(
                                                _localctx, _startState, RULE_subexpressionWrap);
                                        setState(77);
                                        if (!(precpred(_ctx, 5)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 5)");
                                        setState(78);
                                        match(KLEENE_STAR);
                                    }
                                    break;
                                case 2:
                                    {
                                        _localctx =
                                                new KleenePlusContext(
                                                        new SubexpressionWrapContext(
                                                                _parentctx, _parentState));
                                        pushNewRecursionContext(
                                                _localctx, _startState, RULE_subexpressionWrap);
                                        setState(79);
                                        if (!(precpred(_ctx, 4)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 4)");
                                        setState(80);
                                        match(KLEENE_PLUS);
                                    }
                                    break;
                                case 3:
                                    {
                                        _localctx =
                                                new OptionalContext(
                                                        new SubexpressionWrapContext(
                                                                _parentctx, _parentState));
                                        pushNewRecursionContext(
                                                _localctx, _startState, RULE_subexpressionWrap);
                                        setState(81);
                                        if (!(precpred(_ctx, 3)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 3)");
                                        setState(82);
                                        match(OPTIONAL);
                                    }
                                    break;
                                case 4:
                                    {
                                        _localctx =
                                                new RepetitionWithSubexpressionContext(
                                                        new SubexpressionWrapContext(
                                                                _parentctx, _parentState));
                                        pushNewRecursionContext(
                                                _localctx, _startState, RULE_subexpressionWrap);
                                        setState(83);
                                        if (!(precpred(_ctx, 2)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 2)");
                                        setState(84);
                                        repetition();
                                    }
                                    break;
                            }
                        }
                    }
                    setState(89);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class RepetitionContext extends ParserRuleContext {
        public RepetitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_repetition;
        }

        public RepetitionContext() {}

        public void copyFrom(RepetitionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class RepetitionRangeContext extends RepetitionContext {
        public Token lower;
        public Token upper;

        public TerminalNode CLOSING_REPETITION() {
            return getToken(RegularExpressionParser.CLOSING_REPETITION, 0);
        }

        public TerminalNode REPETITION_SEPARATOR() {
            return getToken(RegularExpressionParser.REPETITION_SEPARATOR, 0);
        }

        public TerminalNode OPENING_REPETITION() {
            return getToken(RegularExpressionParser.OPENING_REPETITION, 0);
        }

        public List<TerminalNode> REPETITION_OPERAND() {
            return getTokens(RegularExpressionParser.REPETITION_OPERAND);
        }

        public TerminalNode REPETITION_OPERAND(int i) {
            return getToken(RegularExpressionParser.REPETITION_OPERAND, i);
        }

        public RepetitionRangeContext(RepetitionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof RegularExpressionParserVisitor)
                return ((RegularExpressionParserVisitor<? extends T>) visitor)
                        .visitRepetitionRange(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class FixedRepetitionContext extends RepetitionContext {
        public Token numberOfRepetitions;

        public TerminalNode FIXED_REPETITION_OPENER() {
            return getToken(RegularExpressionParser.FIXED_REPETITION_OPENER, 0);
        }

        public TerminalNode REPETITION_OPERAND() {
            return getToken(RegularExpressionParser.REPETITION_OPERAND, 0);
        }

        public FixedRepetitionContext(RepetitionContext ctx) {
            copyFrom(ctx);
        }
